--- a/kubernetes-manifests/adservice.yaml
+++ b/kubernetes-manifests/adservice.yaml
@@ -33,7 +33,7 @@ spec:
       - name: server
         image: asia.gcr.io/striped-symbol-335902/adservice
       imagePullSecrets:
-        - name: gcr-json-key
+      - name: gcr1-json-key
         ports:
         - containerPort: 9555
         env:
