--- a/kubernetes-manifests/cartservice.yaml
+++ b/kubernetes-manifests/cartservice.yaml
@@ -31,7 +31,7 @@ spec:
       - name: gcr1-json-key
       containers:
       - name: server
-        image: cartservice
+        image: asia.gcr.io/striped-symbol-335902/cartservice
         ports:
         - containerPort: 7070
         env:
