--- a/kubernetes-manifests/checkoutservice.yaml
+++ b/kubernetes-manifests/checkoutservice.yaml
@@ -30,7 +30,7 @@ spec:
       - name: gcr1-json-key
       containers:
         - name: server
-          image: checkoutservice
+          image: asia.gcr.io/striped-symbol-335902/checkoutservice
           ports:
           - containerPort: 5050
           readinessProbe:
