--- a/kubernetes-manifests/paymentservice.yaml
+++ b/kubernetes-manifests/paymentservice.yaml
@@ -28,10 +28,10 @@ spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
       imagePullSecrets:
-      - name: deploy-pull-harbor
+      - name: gcr1-json-key
       containers:
       - name: server
-        image: paymentservice
+        image: asia.gcr.io/striped-symbol-335902/paymentservice
         ports:
         - containerPort: 50051
         env:
