--- a/kubernetes-manifests/recommendationservice.yaml
+++ b/kubernetes-manifests/recommendationservice.yaml
@@ -28,10 +28,10 @@ spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
       imagePullSecrets:
-      - name: deploy-pull-harbor
+      - name: gcr1-json-key
       containers:
       - name: server
-        image: recommendationservice
+        image: asia.gcr.io/striped-symbol-335902/recommendationservice
         ports:
         - containerPort: 8080
         readinessProbe:
