--- a/kubernetes-manifests/emailservice.yaml
+++ b/kubernetes-manifests/emailservice.yaml
@@ -31,7 +31,7 @@ spec:
       - name: gcr1-json-key
       containers:
       - name: server
-        image: asia.gcr.io/striped-symbol-335902/emailservice
+        image: gcr.io/optimum-spring-337907/emailservice
         ports:
         - containerPort: 8080
         env:
