--- a/kubernetes-manifests/paymentservice.yaml
+++ b/kubernetes-manifests/paymentservice.yaml
@@ -27,11 +27,10 @@ spec:
     spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
-      imagePullSecrets:
-      - name: gcr1-json-key
+
       containers:
       - name: server
-        image: asia.gcr.io/striped-symbol-335902/paymentservice
+        image: gcr.io/adservice-createimage-wf5pd/paymentservice:4.0.0
         ports:
         - containerPort: 50051
         env:
