--- a/kubernetes-manifests/productcatalogservice.yaml
+++ b/kubernetes-manifests/productcatalogservice.yaml
@@ -27,11 +27,10 @@ spec:
     spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
-      imagePullSecrets:
-      - name: gcr1-json-key
+
       containers:
       - name: server
-        image: asia.gcr.io/striped-symbol-335902/productcatalogservice
+        image: gcr.io/optimum-spring-337907/productcatalogservice
         ports:
         - containerPort: 3550
         env:
