--- a/kubernetes-manifests/recommendationservice.yaml
+++ b/kubernetes-manifests/recommendationservice.yaml
@@ -27,11 +27,10 @@ spec:
     spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
-      imagePullSecrets:
-      - name: gcr1-json-key
+
       containers:
       - name: server
-        image: asia.gcr.io/striped-symbol-335902/recommendationservice
+        image: gcr.io/optimum-spring-337907/recommendationservice:4.0.0
         ports:
         - containerPort: 8080
         readinessProbe:
